# kopete-qq

./: CMakeLists.txt  kopete_qq.desktop  qqaccount.cpp  qqaccount.h  qqaddcontactpage.cpp  qqaddcontactpage.h  qqchatsession.cpp  qqchatsession.h  qqcontact.cpp  qqcontact.h  qqeditaccountwidget.cpp  qqeditaccountwidget.h  qqprotocol.cpp  qqprotocol.h
libeva/: CMakeLists.txt  evacrypt.cpp  evacrypt.h  evafriend.cpp  evafriend.h  evagroup.cpp  evagroup.h  evaimreceive.cpp  evaimreceive.h  evaimsend.cpp  evaimsend.h  evakeepalive.cpp  evakeepalive.h  evakeyrequest.cpp  evakeyrequest.h  evalevel.cpp  evalevel.h  evalogin.cpp  evalogin.h  evalogout.cpp  evalogout.h  evanetwork.cpp  evanetwork.h  evaonlinestatus.cpp  evaonlinestatus.h  evapacket.cpp  evapacket.h  evasignature.cpp  evasignature.h  evasocket.cpp  evasocket.h  evauserinfo.cpp  evauserinfo.h  evautil.cpp  evautil.h  evaweather.cpp  evaweather.h  main.cpp
libeva/libuh/: evauhinfo.cpp  evauhinfo.h  evauhmanager.cpp  evauhmanager.h  evauhpacket.cpp  evauhpacket.h  evauhsocket.cpp  evauhsocket.h  evauhtransfer.cpp  evauhtransfer.h
ui/: qqchatui.rc  qqeditaccount.ui  qqvcard.ui
